address-verification-service/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: address-verification-service
  name: address-verification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-verification-service
  template:
    metadata:
      labels:
        app: address-verification-service
    spec:
      containers:
      - image: murphye/address-verification-service
        name: address-verification-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: address-verification-service
  name: address-verification-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: address-verification-service
